tools/tests/ui/fail/l1028.cnf
// Test file for error code: L1028
// Expected error: Missing Overflow character in control flow -- expected valid UTF-8 encoding
// Category: Syntax
// Layer: 1 (Lexer)

IDENTIFICATION DIVISION.
    PROGRAM "test-missing".
EVIRONMENT DIVISION.
    OS "invalid™utf8-chars".
